<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ArticleDetailActivity"
    android:background="@android:color/white" >
   <LinearLayout
        android:id="@+id/llnavigation"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/navigation_color"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_titleaci"
            android:layout_width="wrap_content"
           android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="22dip"
            android:paddingLeft="12dip"
             android:textStyle="bold"
             android:gravity="center_vertical"
            android:text="@string/title_activity_article_detail" />
        

	    <ImageView
	        android:id="@+id/image_login"
	        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:layout_weight="1"
			        android:gravity="right"
			        android:scaleType="fitEnd"
	        android:src="@drawable/user" />
        
    </LinearLayout>
    <TextView
        android:id="@+id/tv_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
         android:textColor="@android:color/black"  />
	
        <Button
                android:id="@+id/bt_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/see_messages" />
         <Button
                android:id="@+id/bt_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/edit" />
          <Button
                android:id="@+id/bt_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/delete" />
           <Button
                android:id="@+id/bt_valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/valid" />
             <Button
                android:id="@+id/bt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/share" />
</LinearLayout>