<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCommentActivity" 
    android:orientation="vertical"
    android:background="@android:color/white">

       <LinearLayout
        android:id="@+id/llnavigation"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/navigation_color"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
           android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="22dip"
            android:paddingLeft="12dip"
             android:textStyle="bold"
             android:gravity="center_vertical"
            android:text="@string/title_activity_edit_comment" />
        

        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_comment" 
        android:textColor="@android:color/black"/>

   

    <EditText
        android:id="@+id/et_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    </LinearLayout>
      <Button
                android:id="@+id/bt_valider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/valid" />

</LinearLayout>